another video fix

--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
         <div class="mobile-title">
             <h2>Thesis exhibit</h2>
         </div>
-        <video src="./resources/videos/thesis.mp4" poster=".resources/images/poster.png"></video>
+        <div>
+            <video src="./resources/videos/thesis.mp4"></video>
+        </div>
     </div>
 
     <footer class="desktop">
