--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <h2>Thesis exhibit</h2>
         </div>
         <div>
-            <video src="./resources/videos/thesis.mp4"></video>
+            <video controls src="./resources/videos/thesis.mp4"></video>
         </div>
     </div>
 
