extra styling added for desktop and mobile version. FINAL VERSION of HTML & CSS FILES

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 </head>
 
 <body id="top">
@@ -50,7 +51,7 @@
     <div class="mobile-text mobile">
       <h1 class="main-title">Learn something new everyday</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <p class="button">Start Here</p>
+      <p class="button"><a href="#">Start Here</a></p>
     </div>
   </div>
 
@@ -223,7 +224,9 @@
       <h2>Thesis exhibit</h2>
     </div>
     <div>
-      <video controls src="./resources/videos/thesis.mp4"></video>
+      <video poster="./resources/images/poster.png" preload="auto" controls>
+        <source src="./resources/videos/thesis.mp4" />
+        </video>
     </div>
   </div>
 
