UPDATED: Final Versions of HTML & CSS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="text desktop">
       <h1 class="main-title">Learn something new everyday</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <p class="button">Start Here</p>
+      <p class="button"><a href="#">Start Here</a></p>
     </div>
     <div class="mobile-text mobile">
       <h1 class="main-title">Learn something new everyday</h1>
@@ -184,12 +184,12 @@
     <h2>Start learning</h2>
   </div>
   <div class="mobile course-title">
-    <p>Software engineering</p>
-    <p>Computer art</p>
-    <p>Design</p>
-    <p>Data</p>
-    <p>Business</p>
-    <p>Marketing</p>
+    <p><a href="#">Software engineering</a></p>
+    <p><a href="#">Computer art</a></p>
+    <p><a href="#">Design</a></p>
+    <p><a href="#">Data</a></p>
+    <p><a href="#">Business</a></p>
+    <p><a href="#">Marketing</a></p>
   </div>
 
   <!-- Thesis section HTML -->
