--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Colmar Academy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="./resources/css/reset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css"> -->
   <link rel="stylesheet" href="./resources/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 </head>
@@ -46,12 +47,12 @@
     <div class="text desktop">
       <h1 class="main-title">Learn something new everyday</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <p class="button"><a href="#">Start Here</a></p>
+      <p class="button">Start Here</p>
     </div>
     <div class="mobile-text mobile">
       <h1 class="main-title">Learn something new everyday</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <p class="button"><a href="#">Start Here</a></p>
+      <p class="button">Start Here</p>
     </div>
   </div>
 
